--- a/packages/core/actions/package.json
+++ b/packages/core/actions/package.json
@@ -1,14 +1,14 @@
 {
   "name": "@nocobase/actions",
-  "version": "1.6.0-alpha.28",
+  "version": "1.6.0-beta.8",
   "description": "",
   "license": "AGPL-3.0",
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
   "dependencies": {
-    "@nocobase/cache": "1.6.0-alpha.28",
-    "@nocobase/database": "1.6.0-alpha.28",
-    "@nocobase/resourcer": "1.6.0-alpha.28"
+    "@nocobase/cache": "1.6.0-beta.8",
+    "@nocobase/database": "1.6.0-beta.8",
+    "@nocobase/resourcer": "1.6.0-beta.8"
   },
   "repository": {
     "type": "git",
