--- a/packages/plugins/@nocobase/plugin-environment-variables/package.json
+++ b/packages/plugins/@nocobase/plugin-environment-variables/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nocobase/plugin-environment-variables",
-  "version": "1.6.0-alpha.28",
+  "version": "1.6.0-beta.8",
   "main": "dist/server/index.js",
   "peerDependencies": {
     "@nocobase/client": "1.x",
