--- a/packages/plugins/@nocobase/plugin-notifications/package.json
+++ b/packages/plugins/@nocobase/plugin-notifications/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nocobase/plugin-notifications",
-  "version": "1.6.0-alpha.28",
+  "version": "1.6.0-beta.8",
   "description": "",
   "license": "AGPL-3.0",
   "main": "./dist/server/index.js",
