--- a/packages/core/auth/package.json
+++ b/packages/core/auth/package.json
@@ -1,16 +1,16 @@
 {
   "name": "@nocobase/auth",
-  "version": "1.6.0-alpha.27",
+  "version": "1.6.0-beta.8",
   "description": "",
   "license": "AGPL-3.0",
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
   "dependencies": {
-    "@nocobase/actions": "1.6.0-alpha.27",
-    "@nocobase/cache": "1.6.0-alpha.27",
-    "@nocobase/database": "1.6.0-alpha.27",
-    "@nocobase/resourcer": "1.6.0-alpha.27",
-    "@nocobase/utils": "1.6.0-alpha.27",
+    "@nocobase/actions": "1.6.0-beta.8",
+    "@nocobase/cache": "1.6.0-beta.8",
+    "@nocobase/database": "1.6.0-beta.8",
+    "@nocobase/resourcer": "1.6.0-beta.8",
+    "@nocobase/utils": "1.6.0-beta.8",
     "@types/jsonwebtoken": "^8.5.8",
     "jsonwebtoken": "^8.5.1"
   },
