refactor: update  package.json

--- a/packages/core/client/package.json
+++ b/packages/core/client/package.json
@@ -65,7 +65,8 @@
     "react-router-dom": "^6.11.2",
     "react-to-print": "^2.14.7",
     "sanitize-html": "2.13.0",
-    "use-deep-compare-effect": "^1.8.1"
+    "use-deep-compare-effect": "^1.8.1",
+    "ignore": "^5.2.0"
   },
   "peerDependencies": {
     "react": ">=18.0.0",
