--- a/packages/plugins/@erpspace/plugin-workflow-refresh/package.json
+++ b/packages/plugins/@erpspace/plugin-workflow-refresh/package.json
@@ -2,7 +2,9 @@
   "name": "@erpspace/plugin-workflow-refresh",
   "version": "1.5.11",
   "main": "dist/server/index.js",
-  "dependencies": {},
+  "dependencies": {
+    "@nocobase/plugin-workflow": "^1.5.13"
+  },
   "peerDependencies": {
     "@nocobase/client": "1.x",
     "@nocobase/server": "1.x",
