--- a/packages/presets/nocobase/package.json
+++ b/packages/presets/nocobase/package.json
@@ -32,6 +32,7 @@
     "@nocobase/plugin-data-visualization": "1.6.0-alpha.28",
     "@nocobase/plugin-environment-variables": "1.6.0-alpha.28",
     "@nocobase/plugin-error-handler": "1.6.0-alpha.28",
+    "@nocobase/plugin-eventflow": "1.6.0-alpha.28",
     "@nocobase/plugin-field-china-region": "1.6.0-alpha.28",
     "@nocobase/plugin-field-formula": "1.6.0-alpha.28",
     "@nocobase/plugin-field-m2m-array": "1.6.0-alpha.28",
@@ -106,6 +107,7 @@
     "@nocobase/plugin-data-visualization",
     "@nocobase/plugin-environment-variables",
     "@nocobase/plugin-error-handler",
+    "@nocobase/plugin-eventflow",
     "@nocobase/plugin-field-formula",
     "@nocobase/plugin-field-sequence",
     "@nocobase/plugin-field-sort",
