--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-dom": "^18.0.0",
     "nwsapi": "2.2.7",
     "antd": "5.24.1",
+    "dayjs": "1.11.13",
     "@ant-design/icons": "^5.6.1"
   },
   "config": {
