--- a/package.json
+++ b/package.json
@@ -47,8 +47,8 @@
     "@types/react": "18.3.18",
     "@types/react-dom": "^18.0.0",
     "@typescript-eslint/parser": "^6.2.0",
-    "react-router-dom": "^6.11.2",
-    "react-router": "^6.11.2",
+    "react-router-dom": "6.28.1",
+    "react-router": "6.28.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "nwsapi": "2.2.7",
