feat: integrate json-template-parser package and update imports across core modules

--- a/packages/core/json-template-parser/package.json
+++ b/packages/core/json-template-parser/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@nocobase/json-templates",
+  "name": "@nocobase/json-template-parser",
   "version": "1.6.0-alpha.28",
   "license": "AGPL-3.0",
   "main": "lib/index.js",
