--- a/.github/workflows/manual-release-next.yml
+++ b/.github/workflows/manual-release-next.yml
@@ -97,12 +97,15 @@ jobs:
           do
           git clone -b next https://x-access-token:${{ steps.app-token.outputs.token }}@github.com/nocobase/$repo.git packages/pro-plugins/@nocobase/$repo
           done
-      - name: Set Node.js 18
+      - name: Set Node.js 20
         uses: actions/setup-node@v3
         with:
-          node-version: 18
-      - name: Install Lerna
-        run: npm install -g lerna@4 auto-changelog@2
+          node-version: 20
+      - name: yarn install and build
+        run: |
+          yarn config set registry https://registry.npmjs.org/
+          yarn install
+          yarn build
       - name: Run release.sh
         shell: bash
         run: |
