--- a/.github/workflows/manual-release.yml
+++ b/.github/workflows/manual-release.yml
@@ -98,12 +98,7 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 20
-      - name: yarn install and build
-        run: |
-          yarn config set registry https://registry.npmjs.org/
-          yarn install
-          yarn build
-      - name: Run release.sh
+      - name: Checkout
         shell: bash
         run: |
           cd ./packages/pro-plugins
@@ -118,6 +113,14 @@ jobs:
           git config --global user.name '${{ steps.app-token.outputs.app-slug }}[bot]'
           git config --global user.email '${{ steps.get-user-id.outputs.user-id }}+${{ steps.app-token.outputs.app-slug }}[bot]@users.noreply.github.com>'
           echo "packages/pro-plugins" >> .git/info/exclude
+      - name: yarn install and build
+        run: |
+          yarn config set registry https://registry.npmjs.org/
+          yarn install
+          yarn build
+      - name: Run release.sh
+        shell: bash
+        run: |
           bash release.sh $IS_FEAT
         env:
           PRO_PLUGIN_REPOS: ${{ needs.get-plugins.outputs.rc-plugins }}
