feat: ai integration (#6283)
* feat: ai

* fix: build

* fix: plugin

* fix: bug

* fix: version

* chore: add debug info

* chore: allows to enter a model name manually

* chore: update

* chore: optimize

* fix: bug

* fix: version

* fix: build

* fix: test

--- a/packages/presets/nocobase/package.json
+++ b/packages/presets/nocobase/package.json
@@ -19,6 +19,7 @@
     "@nocobase/plugin-audit-logs": "1.6.0-beta.16",
     "@nocobase/plugin-auth": "1.6.0-beta.16",
     "@nocobase/plugin-auth-sms": "1.6.0-beta.16",
+    "@nocobase/plugin-ai": "1.6.0-beta.16",
     "@nocobase/plugin-backup-restore": "1.6.0-beta.16",
     "@nocobase/plugin-block-iframe": "1.6.0-beta.16",
     "@nocobase/plugin-block-workbench": "1.6.0-beta.16",
@@ -94,6 +95,7 @@
     "@nocobase/plugin-action-print",
     "@nocobase/plugin-auth",
     "@nocobase/plugin-async-task-manager",
+    "@nocobase/plugin-ai",
     "@nocobase/plugin-block-iframe",
     "@nocobase/plugin-block-workbench",
     "@nocobase/plugin-calendar",
