--- a/packages/plugins/@nocobase/plugin-workflow-aggregate/package.json
+++ b/packages/plugins/@nocobase/plugin-workflow-aggregate/package.json
@@ -11,6 +11,7 @@
   "homepage.zh-CN": "https://docs-cn.nocobase.com/handbook/workflow-aggregate",
   "devDependencies": {
     "antd": "5.x",
+    "mathjs": "^10.6.0",
     "react": "18.x",
     "react-i18next": "^11.15.1"
   },
