--- a/packages/plugins/@nocobase/plugin-users/package.json
+++ b/packages/plugins/@nocobase/plugin-users/package.json
@@ -19,6 +19,7 @@
     "@nocobase/database": "1.x",
     "@nocobase/plugin-acl": "1.x",
     "@nocobase/plugin-auth": "1.x",
+    "@nocobase/plugin-system-settings": "1.x",
     "@nocobase/plugin-ui-schema-storage": "1.x",
     "@nocobase/plugin-user-data-sync": "1.x",
     "@nocobase/resourcer": "1.x",
