--- a/packages/plugins/@nocobase/plugin-file-manager/package.json
+++ b/packages/plugins/@nocobase/plugin-file-manager/package.json
@@ -10,7 +10,7 @@
   "homepage": "https://docs.nocobase.com/handbook/file-manager",
   "homepage.zh-CN": "https://docs-cn.nocobase.com/handbook/file-manager",
   "devDependencies": {
-    "@aws-sdk/client-s3": "^3.750.0",
+    "@aws-sdk/client-s3": "3.750.0",
     "@formily/antd-v5": "1.x",
     "@formily/core": "2.x",
     "@formily/react": "2.x",
@@ -29,7 +29,8 @@
     "multer-s3": "^3.0.1",
     "react": "^18.2.0",
     "react-i18next": "^11.15.1",
-    "supertest": "^6.1.6"
+    "supertest": "^6.1.6",
+    "url-join": "4.0.1"
   },
   "peerDependencies": {
     "@nocobase/actions": "1.x",
