refactor: rename plugin-variable-filters to plugin-variable-helpers

--- a/packages/presets/nocobase/package.json
+++ b/packages/presets/nocobase/package.json
@@ -62,6 +62,7 @@
     "@nocobase/plugin-ui-schema-storage": "1.7.0-alpha.3",
     "@nocobase/plugin-user-data-sync": "1.7.0-alpha.3",
     "@nocobase/plugin-users": "1.7.0-alpha.3",
+    "@nocobase/plugin-variable-helpers": "1.6.0-alpha.29",
     "@nocobase/plugin-verification": "1.7.0-alpha.3",
     "@nocobase/plugin-workflow": "1.7.0-alpha.3",
     "@nocobase/plugin-workflow-action-trigger": "1.7.0-alpha.3",
@@ -122,7 +123,7 @@
     "@nocobase/plugin-ui-schema-storage",
     "@nocobase/plugin-user-data-sync",
     "@nocobase/plugin-users",
-    "@nocobase/plugin-variable-filters",
+    "@nocobase/plugin-variable-helpers",
     "@nocobase/plugin-verification",
     "@nocobase/plugin-workflow",
     "@nocobase/plugin-workflow-action-trigger",
