--- a/packages/core/cli/package.json
+++ b/packages/core/cli/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@nocobase/app": "1.7.0-beta.1",
+    "@nocobase/license-kit": "^0.1.0",
     "@types/fs-extra": "^11.0.1",
     "@umijs/utils": "3.5.20",
     "chalk": "^4.1.1",
