--- a/packages/plugins/@nocobase/plugin-locale-tester/package.json
+++ b/packages/plugins/@nocobase/plugin-locale-tester/package.json
@@ -1,6 +1,9 @@
 {
   "name": "@nocobase/plugin-locale-tester",
+  "displayName": "Locale tester",
+  "displayName.zh-CN": "翻译测试工具",
   "version": "1.6.12",
+  "homepage": "https://github.com/nocobase/locales",
   "main": "dist/server/index.js",
   "dependencies": {},
   "peerDependencies": {
