feat: locale tester (#6576)
* feat: locale tester

* fix: locale

* fix: acl.registerSnippet

* feat: package.json

* fix: locale

--- a/packages/presets/nocobase/package.json
+++ b/packages/presets/nocobase/package.json
@@ -43,6 +43,7 @@
     "@nocobase/plugin-gantt": "1.6.12",
     "@nocobase/plugin-graph-collection-manager": "1.6.12",
     "@nocobase/plugin-kanban": "1.6.12",
+    "@nocobase/plugin-locale-tester": "1.6.12",
     "@nocobase/plugin-localization": "1.6.12",
     "@nocobase/plugin-logger": "1.6.12",
     "@nocobase/plugin-map": "1.6.12",
