--- a/packages/plugins/@nocobase/plugin-workflow/package.json
+++ b/packages/plugins/@nocobase/plugin-workflow/package.json
@@ -24,6 +24,7 @@
     "dayjs": "^1.11.8",
     "lodash": "4.17.21",
     "lru-cache": "8.0.5",
+    "nodejs-snowflake": "2.0.1",
     "react": "18.x",
     "react-i18next": "^11.15.1",
     "react-js-cron": "^3.1.0",
