feat(cli): add benchmark script

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "e2e": "nocobase e2e",
     "ts": "nocobase test:server",
     "tc": "nocobase test:client",
+    "benchmark": "nocobase benchmark",
     "doc": "nocobase doc",
     "doc:cn": "nocobase doc --lang=zh-CN",
     "postinstall": "nocobase postinstall",
@@ -85,6 +86,7 @@
     "pretty-quick": "^3.1.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "tinybench": "^4.0.1",
     "typescript": "5.1.3",
     "vitest": "^1.5.0"
   },
@@ -92,5 +94,6 @@
     "node": "20.14.0",
     "yarn": "1.22.19"
   },
-  "dependencies": {}
+  "dependencies": {},
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
