--- a/.github/workflows/manual-build-and-publish-license-kit.yml
+++ b/.github/workflows/manual-build-and-publish-license-kit.yml
@@ -1,4 +1,4 @@
-name: CI
+name: Manual build and publish license-kit
 env:
   DEBUG: napi:*
   APP_NAME: license-kit
@@ -6,6 +6,8 @@ env:
 permissions:
   contents: write
   id-token: write
+on:
+  workflow_dispatch:
 # 'on':
 #   push:
 #     branches:
