--- a/.github/workflows/manual-npm-publish-license-kit.yml
+++ b/.github/workflows/manual-npm-publish-license-kit.yml
@@ -6,8 +6,9 @@ env:
 permissions:
   contents: write
   id-token: write
-# on:
-#   workflow_dispatch:
+on:
+  workflow_dispatch:
+  pull_request:
 # 'on':
 #   push:
 #     branches:
