fix: ci add checkout

--- a/.github/workflows/manual-npm-publish-license-kit.yml
+++ b/.github/workflows/manual-npm-publish-license-kit.yml
@@ -93,8 +93,13 @@ jobs:
           private-key: ${{ secrets.NOCOBASE_APP_PRIVATE_KEY }}
           repositories: license-kit
           skip-token-revoke: true
-      - name: Change directory to license-kit
-        run: cd license-kit
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          repository: nocobase/license-kit
+          token: ${{ steps.app-token.outputs.token }}
+          persist-credentials: true
+          ref: main
       - name: Setup node
         uses: actions/setup-node@v4
         if: ${{ !matrix.settings.docker }}
@@ -166,8 +171,13 @@ jobs:
           private-key: ${{ secrets.NOCOBASE_APP_PRIVATE_KEY }}
           repositories: license-kit
           skip-token-revoke: true
-      - name: Change directory to license-kit
-        run: cd license-kit
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          repository: nocobase/license-kit
+          token: ${{ steps.app-token.outputs.token }}
+          persist-credentials: true
+          ref: main
       - name: Build
         id: build
         uses: cross-platform-actions/action@v0.27.0
@@ -233,8 +243,13 @@ jobs:
           private-key: ${{ secrets.NOCOBASE_APP_PRIVATE_KEY }}
           repositories: license-kit
           skip-token-revoke: true
-      - name: Change directory to license-kit
-        run: cd license-kit
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          repository: nocobase/license-kit
+          token: ${{ steps.app-token.outputs.token }}
+          persist-credentials: true
+          ref: main
       - name: Setup node
         uses: actions/setup-node@v4
         with:
@@ -272,8 +287,13 @@ jobs:
           private-key: ${{ secrets.NOCOBASE_APP_PRIVATE_KEY }}
           repositories: license-kit
           skip-token-revoke: true
-      - name: Change directory to license-kit
-        run: cd license-kit
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          repository: nocobase/license-kit
+          token: ${{ steps.app-token.outputs.token }}
+          persist-credentials: true
+          ref: main
       - name: Setup node
         uses: actions/setup-node@v4
         with:
@@ -310,8 +330,13 @@ jobs:
           private-key: ${{ secrets.NOCOBASE_APP_PRIVATE_KEY }}
           repositories: license-kit
           skip-token-revoke: true
-      - name: Change directory to license-kit
-        run: cd license-kit
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          repository: nocobase/license-kit
+          token: ${{ steps.app-token.outputs.token }}
+          persist-credentials: true
+          ref: main
       - name: Setup node
         uses: actions/setup-node@v4
         with:
@@ -350,8 +375,13 @@ jobs:
           private-key: ${{ secrets.NOCOBASE_APP_PRIVATE_KEY }}
           repositories: license-kit
           skip-token-revoke: true
-      - name: Change directory to license-kit
-        run: cd license-kit
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          repository: nocobase/license-kit
+          token: ${{ steps.app-token.outputs.token }}
+          persist-credentials: true
+          ref: main
       - name: Download artifacts
         uses: actions/download-artifact@v4
         with:
@@ -392,8 +422,13 @@ jobs:
           private-key: ${{ secrets.NOCOBASE_APP_PRIVATE_KEY }}
           repositories: license-kit
           skip-token-revoke: true
-      - name: Change directory to license-kit
-        run: cd license-kit
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          repository: nocobase/license-kit
+          token: ${{ steps.app-token.outputs.token }}
+          persist-credentials: true
+          ref: main
       - name: Download artifacts
         uses: actions/download-artifact@v4
         with:
@@ -439,8 +474,13 @@ jobs:
           private-key: ${{ secrets.NOCOBASE_APP_PRIVATE_KEY }}
           repositories: license-kit
           skip-token-revoke: true
-      - name: Change directory to license-kit
-        run: cd license-kit
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          repository: nocobase/license-kit
+          token: ${{ steps.app-token.outputs.token }}
+          persist-credentials: true
+          ref: main
       - name: Download artifacts
         uses: actions/download-artifact@v4
         with:
@@ -480,8 +520,13 @@ jobs:
           private-key: ${{ secrets.NOCOBASE_APP_PRIVATE_KEY }}
           repositories: license-kit
           skip-token-revoke: true
-      - name: Change directory to license-kit
-        run: cd license-kit
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          repository: nocobase/license-kit
+          token: ${{ steps.app-token.outputs.token }}
+          persist-credentials: true
+          ref: main
       - name: Setup node
         uses: actions/setup-node@v4
         with:
@@ -527,8 +572,13 @@ jobs:
           private-key: ${{ secrets.NOCOBASE_APP_PRIVATE_KEY }}
           repositories: license-kit
           skip-token-revoke: true
-      - name: Change directory to license-kit
-        run: cd license-kit
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          repository: nocobase/license-kit
+          token: ${{ steps.app-token.outputs.token }}
+          persist-credentials: true
+          ref: main
       - name: Setup node
         uses: actions/setup-node@v4
         with:
