fix: github token

--- a/.github/workflows/manual-npm-publish-license-kit.yml
+++ b/.github/workflows/manual-npm-publish-license-kit.yml
@@ -615,5 +615,5 @@ jobs:
             echo "Not a release, skipping publish"
           fi
         env:
-          # GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
