--- a/packages/core/client/package.json
+++ b/packages/core/client/package.json
@@ -66,7 +66,8 @@
     "react-router-dom": "^6.11.2",
     "react-to-print": "^2.14.7",
     "sanitize-html": "2.13.0",
-    "use-deep-compare-effect": "^1.8.1"
+    "use-deep-compare-effect": "^1.8.1",
+    "tabulator-tables": "^6.3.0"
   },
   "peerDependencies": {
     "react": ">=18.0.0",
