--- a/packages/plugins/@nocobase/plugin-departments/package.json
+++ b/packages/plugins/@nocobase/plugin-departments/package.json
@@ -6,14 +6,12 @@
   "description.zh-CN": "以部门来组织用户，设定上下级关系，绑定角色控制权限，并支持作为变量用于工作流和表达式。",
   "version": "1.7.0-beta.16",
   "main": "dist/server/index.js",
-  "devDependencies": {
-    "@nocobase/plugin-user-data-sync": "1.6.20"
-  },
   "peerDependencies": {
     "@nocobase/actions": "1.x",
     "@nocobase/client": "1.x",
     "@nocobase/server": "1.x",
-    "@nocobase/test": "1.x"
+    "@nocobase/test": "1.x",
+    "@nocobase/plugin-user-data-sync": "1.x"
   },
   "keywords": [
     "Users & permissions"
