--- a/packages/plugins/@nocobase/plugin-field-attachment-url/package.json
+++ b/packages/plugins/@nocobase/plugin-field-attachment-url/package.json
@@ -9,10 +9,8 @@
   "peerDependencies": {
     "@nocobase/client": "1.x",
     "@nocobase/server": "1.x",
-    "@nocobase/test": "1.x"
-  },
-  "devDependencies": {
-    "@nocobase/plugin-file-manager": "1.6.20"
+    "@nocobase/test": "1.x",
+    "@nocobase/plugin-file-manager": "1.x"
   },
   "keywords": [
     "Collection fields"
