--- a/packages/plugins/@nocobase/plugin-workflow-response-message/package.json
+++ b/packages/plugins/@nocobase/plugin-workflow-response-message/package.json
@@ -12,10 +12,8 @@
     "@nocobase/client": "1.x",
     "@nocobase/server": "1.x",
     "@nocobase/test": "1.x",
-    "@nocobase/utils": "1.x"
-  },
-  "devDependencies": {
-    "@nocobase/plugin-workflow": "1.6.20"
+    "@nocobase/utils": "1.x",
+    "@nocobase/plugin-workflow": "1.x"
   },
   "keywords": [
     "Workflow"
