--- a/packages/core/create-nocobase-app/package.json
+++ b/packages/core/create-nocobase-app/package.json
@@ -8,6 +8,7 @@
     "axios": "^1.7.0",
     "chalk": "^4.1.1",
     "commander": "^9.2.0",
+    "fs-extra": "^11.3.0",
     "tar": "6.1.11"
   },
   "bin": {
