--- a/packages/core/server/package.json
+++ b/packages/core/server/package.json
@@ -47,6 +47,7 @@
     "multer": "^1.4.2",
     "nanoid": "^3.3.11",
     "semver": "^7.7.1",
+    "compression": "^1.8.0",
     "serve-handler": "^6.1.6",
     "ws": "^8.13.0",
     "xpipe": "^1.0.5"
