--- a/packages/core/server/package.json
+++ b/packages/core/server/package.json
@@ -45,9 +45,10 @@
     "koa-static": "^5.0.0",
     "lodash": "^4.17.21",
     "multer": "^1.4.2",
-    "nanoid": "3.3.4",
-    "semver": "^7.3.7",
-    "serve-handler": "^6.1.5",
+    "nanoid": "^3.3.11",
+    "semver": "^7.7.1",
+    "compression": "^1.8.0",
+    "serve-handler": "^6.1.6",
     "ws": "^8.13.0",
     "xpipe": "^1.0.5"
   },
