--- a/.github/workflows/nocobase-test-backend.yml
+++ b/.github/workflows/nocobase-test-backend.yml
@@ -5,38 +5,40 @@ concurrency:
   cancel-in-progress: true
 
 on:
-  push:
-    branches:
-      - main
-      - next
-      - develop
-    paths:
-      - 'package.json'
-      - '**/yarn.lock'
-      - 'packages/core/acl/**'
-      - 'packages/core/auth/**'
-      - 'packages/core/actions/**'
-      - 'packages/core/database/**'
-      - 'packages/core/resourcer/**'
-      - 'packages/core/data-source-manager/**'
-      - 'packages/core/server/**'
-      - 'packages/core/utils/**'
-      - 'packages/plugins/**/src/server/**'
-      - '.github/workflows/nocobase-test-backend.yml'
-  pull_request:
-    paths:
-      - 'package.json'
-      - '**/yarn.lock'
-      - 'packages/core/acl/**'
-      - 'packages/core/auth/**'
-      - 'packages/core/actions/**'
-      - 'packages/core/database/**'
-      - 'packages/core/resourcer/**'
-      - 'packages/core/data-source-manager/**'
-      - 'packages/core/server/**'
-      - 'packages/core/utils/**'
-      - 'packages/plugins/**/src/server/**'
-      - '.github/workflows/nocobase-test-backend.yml'
+  workflow_dispatch:
+
+  # push:
+  #   branches:
+  #     - main
+  #     - next
+  #     - develop
+  #   paths:
+  #     - 'package.json'
+  #     - '**/yarn.lock'
+  #     - 'packages/core/acl/**'
+  #     - 'packages/core/auth/**'
+  #     - 'packages/core/actions/**'
+  #     - 'packages/core/database/**'
+  #     - 'packages/core/resourcer/**'
+  #     - 'packages/core/data-source-manager/**'
+  #     - 'packages/core/server/**'
+  #     - 'packages/core/utils/**'
+  #     - 'packages/plugins/**/src/server/**'
+  #     - '.github/workflows/nocobase-test-backend.yml'
+  # pull_request:
+  #   paths:
+  #     - 'package.json'
+  #     - '**/yarn.lock'
+  #     - 'packages/core/acl/**'
+  #     - 'packages/core/auth/**'
+  #     - 'packages/core/actions/**'
+  #     - 'packages/core/database/**'
+  #     - 'packages/core/resourcer/**'
+  #     - 'packages/core/data-source-manager/**'
+  #     - 'packages/core/server/**'
+  #     - 'packages/core/utils/**'
+  #     - 'packages/plugins/**/src/server/**'
+  #     - '.github/workflows/nocobase-test-backend.yml'
 
 jobs:
   sqlite-test:
