feat: enhance MultipleKeywordsInput with Excel import functionality and add tips for column selection

--- a/packages/plugins/@nocobase/plugin-filter-operator-multiple-keywords/package.json
+++ b/packages/plugins/@nocobase/plugin-filter-operator-multiple-keywords/package.json
@@ -11,7 +11,9 @@
   "keywords": [
     "Multiple keywords"
   ],
-  "dependencies": {},
+  "dependencies": {
+    "xlsx": "0.18.5"
+  },
   "peerDependencies": {
     "@nocobase/client": "1.x",
     "@nocobase/server": "1.x",
