--- a/packages/core/cli/package.json
+++ b/packages/core/cli/package.json
@@ -21,6 +21,7 @@
     "pm2": "^6.0.5",
     "portfinder": "^1.0.28",
     "tree-kill": "^1.2.2",
+    "tar": "^7.4.3",
     "tsx": "^4.19.0"
   },
   "devDependencies": {
