--- a/packages/core/create-nocobase-app/package.json
+++ b/packages/core/create-nocobase-app/package.json
@@ -9,7 +9,7 @@
     "chalk": "^4.1.1",
     "commander": "^9.2.0",
     "fs-extra": "^11.3.0",
-    "tar": "6.1.11"
+    "tar": "^7.4.3"
   },
   "bin": {
     "create-nocobase-app": "./bin/index.js"
