--- a/.github/workflows/release-pro.yml
+++ b/.github/workflows/release-pro.yml
@@ -48,6 +48,8 @@ jobs:
         uses: docker/setup-qemu-action@v2
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
+        with:
+          driver-opts: network=host
       - name: Docker meta
         id: meta
         uses: docker/metadata-action@v4
