--- a/packages/plugins/@nocobase/plugin-file-manager/package.json
+++ b/packages/plugins/@nocobase/plugin-file-manager/package.json
@@ -19,6 +19,7 @@
     "@types/koa-multer": "^1.0.1",
     "@types/multer": "^1.4.5",
     "antd": "5.x",
+    "axios": "^1.7.7",
     "cos-nodejs-sdk-v5": "^2.11.14",
     "koa-static": "^5.0.0",
     "mime-match": "^1.0.2",
