--- a/packages/plugins/@nocobase/plugin-file-manager/package.json
+++ b/packages/plugins/@nocobase/plugin-file-manager/package.json
@@ -20,6 +20,7 @@
     "@types/multer": "^1.4.5",
     "antd": "5.x",
     "cos-nodejs-sdk-v5": "^2.11.14",
+    "axios": "^1.7.0",
     "koa-static": "^5.0.0",
     "mime-match": "^1.0.2",
     "mkdirp": "~0.5.4",
