--- a/.github/workflows/nocobase-test-backend.yml
+++ b/.github/workflows/nocobase-test-backend.yml
@@ -61,7 +61,9 @@ jobs:
           node-version: ${{ matrix.node_version }}
           cache: 'yarn'
       - name: Install project dependencies
-        run: yarn install
+        run: |
+          yarn install
+          yarn add sqlite3 --no-save -W
       - name: Test with Sqlite
         run: yarn test --server --single-thread=false
         env:
