--- a/packages/core/server/package.json
+++ b/packages/core/server/package.json
@@ -8,8 +8,8 @@
     "@formily/json-schema": "2.x",
     "@hapi/topo": "^6.0.0",
     "@koa/cors": "^5.0.0",
-    "@koa/multer": "^3.0.2",
-    "@koa/router": "^9.4.0",
+    "@koa/multer": "^3.1.0",
+    "@koa/router": "^13.1.0",
     "@nocobase/acl": "1.6.21",
     "@nocobase/actions": "1.6.21",
     "@nocobase/auth": "1.6.21",
@@ -26,7 +26,7 @@
     "@types/decompress": "4.2.7",
     "@types/ini": "^1.3.31",
     "@types/koa-send": "^4.1.3",
-    "@types/multer": "^1.4.5",
+    "@types/multer": "^1.4.12",
     "async-mutex": "^0.5.0",
     "axios": "^1.7.0",
     "chalk": "^4.1.1",
@@ -45,7 +45,7 @@
     "koa-send": "^5.0.1",
     "koa-static": "^5.0.0",
     "lodash": "^4.17.21",
-    "multer": "^1.4.2",
+    "multer": "^1.4.5-lts.2",
     "nanoid": "^3.3.11",
     "semver": "^7.7.1",
     "serve-handler": "^6.1.6",
