--- a/packages/core/cli/package.json
+++ b/packages/core/cli/package.json
@@ -13,11 +13,13 @@
     "@umijs/utils": "3.5.20",
     "chalk": "^4.1.1",
     "commander": "^9.2.0",
+    "deepmerge": "^4.3.1",
     "dotenv": "^16.0.0",
     "execa": "^5.1.1",
     "fast-glob": "^3.3.1",
     "fs-extra": "^11.1.1",
     "p-all": "3.0.0",
+    "pm2": "^6.0.5",
     "portfinder": "^1.0.28",
     "tar": "^7.4.3",
     "tree-kill": "^1.2.2",
